--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^18.11.9",
     "bluebird": "^3.7.2",
+    "cloudinary": "^1.32.0",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.60.0",
