--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3",
     "node-telegram-bot-api": "^0.60.0",
-    "telegraf": "^4.11.2"
+    "telegraf": "^4.11.2",
+    "typegram": "^4.1.0"
   }
 }
